backend/backend_argocd/back_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: suhyeonsong/zicdding:v2.0
        name: backendtest
        ports:
        - containerPort: 3000
