backend/backend_argocd/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: backend
spec:
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30000
    protocol: TCP
  selector:
    app: backend
  type: NodePort
